# assistant-octopus

./: .env.example  .gitignore  LICENSE  README.md  cli_server.py  pyproject.toml  run.sh  run_cli.sh  run_tg.sh
api/: __init__.py  api.py
api/models/: __init__.py  task_models.py
api/routes/: __init__.py  messaging.py  tasks.py  tasks_backup.py
clients/: ollama_cli.py  tg_client.py  tg_handlers.py
db/: storage.py  supabase_client.py
db/backends/: base.py  file_backend.py  supabase_backend.py
db/repositories/: history_repo.py  session_repo.py  session_state_repo.py  task_repo.py  user_repo.py  whitelist_repo.py
docs/: ADR-01: Messaging.md  ADR-02: Scheduler.md  CLI_README.md  initial_idea.md  mvp-generated-tasks.md
docs/ADR/: ADR-01: Messaging.md  ADR-03: User Sessions.md
docs/ideas/: DailyPosts.md  cursor_importing_services_into_jupyter.md
models/: __init__.py  messaging_models.py  task_models.py
services/: __init__.py  api.py  ollama_llm.py  service_registry.py  supervisor_router.py
services/image/: image_generation_tool.py  image_generator.py  image_models.py  image_service.py
services/image/providers/: image_router_provider.py  together_ai_provider.py
services/llm/: __init__.py  ollama_llm.py
services/messaging/: __init__.py  factory.py  job_queue.py  messaging_service.py  models.py  router.py
services/scheduler/: __init__.py  scheduler_service.py  task_service.py
services/supervisor/: __init__.py  supervisor_router.py
services/user/: user_service.py
tests/: conftest.py  test_image_generation_tool.py  test_image_service.py  test_job_queue.py  test_messaging_models.py  test_messaging_service.py  test_scheduler.py  test_supervisor_api.py  test_user_service.py
utils/: config.py  constants.py  logger.py  logging_config.py
