[tool.poetry]
name = "assistant-octopus"
version = "0.0.1"
description = "Personal agentic assistant"
authors = ["ExitNot <kostiantynkolchenko@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
fastapi = "^0.116.1"
importlib = "^1.0.4"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
python-telegram-bot = "^22.2"
aiofiles = "^24.1.0"
requests = "^2.32.4"
openai = "^1.99.9"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.experiments.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
