[project]
name = "assistant-octopus"
version = "0.0.1"
description = "Personal agentic assistant"
authors = [
    { name = "ExitNot", email = "kostiantynkolchenko@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "fastapi>=0.116.1,<1.0.0",
    "importlib>=1.0.4,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-telegram-bot>=22.2,<23.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "requests>=2.32.4,<3.0.0",
    "openai>=1.99.9,<2.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "prompt_toolkit>=3.0.43,<4.0.0",
    "supabase>=2.3.4,<3.0.0",
    "datetime>=5.5,<6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0"
]
experiments = [
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.0.0,<7.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "clients", "db", "models", "services", "utils"]